--- a/portfolio/imports/ui/components/Biography/biography.scss
+++ b/portfolio/imports/ui/components/Biography/biography.scss
@@ -7,5 +7,6 @@
   max-width: 600px;
   margin: 0 auto;
   min-height: 100%;
-  background: black;
+  border-radius: 5px;
+  background: $general-color;
 }
