--- a/portfolio/imports/ui/style/general.scss
+++ b/portfolio/imports/ui/style/general.scss
@@ -4,9 +4,9 @@
 // ----------------------------------------------------------------------------
 
 body {
-  font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  font-family: Arial;
+  background-color: $tertiary-color;
+  background-image: linear-gradient(to bottom, $tertiary-color, $theme-color 100%);
   background-attachment: fixed;
 
   position: absolute;
@@ -19,13 +19,6 @@ body {
   margin: 0;
 
   font-size: 14px;
-}
-
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
 }
 
 header {
@@ -41,10 +34,8 @@ header {
 
 h1 {
   font-size: 1.5em;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 1em;
   display: inline-block;
-  margin-right: 1em;
 }
 
 form {
