--- a/portfolio/imports/ui/style/general.scss
+++ b/portfolio/imports/ui/style/general.scss
@@ -28,6 +28,12 @@ header {
   position: relative;
 }
 
+footer {
+  text-align: center;
+  padding: 20px;
+  margin-top: 40px;
+}
+
 #login-buttons {
   display: block;
 }
