--- a/portfolio/imports/ui/style/elements.scss
+++ b/portfolio/imports/ui/style/elements.scss
@@ -1,6 +1,6 @@
 // ----------------------------------------------------------------------------
 // File Developer: Peter Pak
-// Description: Script for general styling
+// Description: Script for element stylings
 // ----------------------------------------------------------------------------
 
 body {
@@ -34,14 +34,12 @@ footer {
   margin-top: 40px;
 }
 
-#login-buttons {
-  display: block;
+p {
+  font-size: 1em;
 }
 
-h1 {
-  font-size: 1.5em;
-  margin: 1em;
-  display: inline-block;
+#login-buttons {
+  display: block;
 }
 
 form {
@@ -68,15 +66,6 @@ ul {
   margin: 0;
   padding: 0;
   background: white;
-}
-
-.delete {
-  float: right;
-  font-weight: bold;
-  background: none;
-  font-size: 1em;
-  border: none;
-  position: relative;
 }
 
 li {
