--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>test</h1>
-    <div id="content"></div>
-    <script src="{{ url_for('static', filename='js/bundle.js') }}"></script>
+    <div id="root"></div>
+    <script src="static/js/bundle.js"></script>
   </body>
 </html>
