--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -5,8 +5,7 @@
     <title>Flask Server</title>
   </head>
   <body>
-    <h1>test</h1>
     <div id="root"></div>
-    <script src="static/js/bundle.js"></script>
+    <script src="{{ url_for( 'static', filename = 'js/bundle.js' )}}"></script>
   </body>
 </html>
