--- a/src/style/elements.scss
+++ b/src/style/elements.scss
@@ -1,12 +1,16 @@
 // ----------------------------------------------------------------------------
-// File Developer: Peter Pak
-// Description: Custom scss precompiler file to hold scss references
+// File Developrer: Peter Pak
+// Description: Custom scss precompiler file for css elements
 // ----------------------------------------------------------------------------
 
-// Module Imports -------------------------------------------------------------
-@import "~bootstrap/scss/bootstrap";
+// Headers --------------------------------------------------------------------
+h1 {
+  color: red;
+}
 // ----------------------------------------------------------------------------
 
-// Custom Style Imports -------------------------------------------------------
-@import "./elements";
+// ----------------------------------------------------------------------------
+p {
+  color: blue;
+}
 // ----------------------------------------------------------------------------
