--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -9,4 +9,5 @@
 
 // Custom Style Imports -------------------------------------------------------
 @import "./elements";
+@import "./classes";
 // ----------------------------------------------------------------------------
