--- a/flask-javascript/src/style/elements.scss
+++ b/flask-javascript/src/style/elements.scss
@@ -9,7 +9,7 @@ h1 {
 }
 // ----------------------------------------------------------------------------
 
-// ----------------------------------------------------------------------------
+// Text -----------------------------------------------------------------------
 p {
   color: blue;
 }
