--- a/flask-javascript/src/style/classes.scss
+++ b/flask-javascript/src/style/classes.scss
@@ -4,6 +4,10 @@
 // ----------------------------------------------------------------------------
 
 // Interactables --------------------------------------------------------------
+.btn {
+  margin: 0.25em;
+}
+
 .form-control {
   margin: 0.5em;
 }
