--- a/flask-javascript/src/style/elements.scss
+++ b/flask-javascript/src/style/elements.scss
@@ -5,12 +5,27 @@
 
 // Headers --------------------------------------------------------------------
 h1 {
+  color: green;
+}
+h2 {
+  color: brown;
+}
+h3 {
+  color: yellow;
+}
+h4 {
+  color: orange;
+}
+h5 {
   color: red;
+}
+h6 {
+  color: purple;
 }
 // ----------------------------------------------------------------------------
 
 // Text -----------------------------------------------------------------------
 p {
-  color: blue;
+  color: black;
 }
 // ----------------------------------------------------------------------------
