--- a/flask-javascript/src/style/elements.scss
+++ b/flask-javascript/src/style/elements.scss
@@ -5,22 +5,22 @@
 
 // Headers --------------------------------------------------------------------
 h1 {
-  color: green;
+  color: violet;
 }
 h2 {
-  color: brown;
+  color: indigo;
 }
 h3 {
-  color: yellow;
+  color: brown;
 }
 h4 {
-  color: orange;
+  color: green;
 }
 h5 {
-  color: red;
+  color: orange;
 }
 h6 {
-  color: purple;
+  color: red;
 }
 // ----------------------------------------------------------------------------
 
