--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -4,7 +4,7 @@
 // ----------------------------------------------------------------------------
 
 // Module Imports -------------------------------------------------------------
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";                                            // Primary bootstrap import
 // ----------------------------------------------------------------------------
 
 // Custom Style Imports -------------------------------------------------------
