--- a/flask-javascript/src/components/TicTacToeSquare/square.scss
+++ b/flask-javascript/src/components/TicTacToeSquare/square.scss
@@ -1,3 +1,8 @@
+// ----------------------------------------------------------------------------
+// File Developer: Peter Pak
+// Description: Stylings for square component
+// ----------------------------------------------------------------------------
+
 .square {
   height: 2.5em;
   width: 2.5em;
