--- a/flask-javascript/server/templates/layout.html
+++ b/flask-javascript/server/templates/layout.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="{{ url_for( 'static', filename = 'js/bundle.js' )}}"></script>
+    <script src="{{ url_for( 'static', filename = 'dist/main.bundle.js' )}}"></script>
   </body>
 </html>
