--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -13,5 +13,5 @@
 // ----------------------------------------------------------------------------
 
 // Component Style Imports ----------------------------------------------------
-@import "../components/TicTacToeSquare/square";                                 // Imports styles for tic tac toe square
+@import "../components/WelcomeHeader/welcomeHeader";
 // ----------------------------------------------------------------------------
