--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -13,5 +13,7 @@
 // ----------------------------------------------------------------------------
 
 // Component Style Imports ----------------------------------------------------
+@import "../components/Footer/footer";                                          // Custom style for footer component
 @import "../components/WelcomeHeader/welcomeHeader";
+@import "../components/WelcomeContent/welcomeContent";
 // ----------------------------------------------------------------------------
