Welcome Page Style Change
Commit changes the style of the navbar and welcome page

--- a/flask-javascript/src/components/WelcomeContent/welcomeContent.scss
+++ b/flask-javascript/src/components/WelcomeContent/welcomeContent.scss
@@ -5,12 +5,13 @@
 
 // Welcome Page Content Style -------------------------------------------------
 .collapse-header {
-  color: #007bff;
+  margin: 0em;
+  color: white;
   text-decoration: none;
 }
 
 .collapse-header:hover {
-  color: blue;
+  color: #007bff;
   text-decoration: none;
 }
 // ----------------------------------------------------------------------------
