--- a/flask-javascript/src/components/WelcomeHeader/welcomeHeader.scss
+++ b/flask-javascript/src/components/WelcomeHeader/welcomeHeader.scss
@@ -8,10 +8,11 @@
   margin: 1em;
   height: 25em;
   width: 25em;
+  border: none;
 }
 
 .profile-border {
-  border: 1em solid #f8f9fa;
+  border: 1em solid #343a40;
 }
 
 .profile-name {
