--- a/flask-javascript/src/style/classes.scss
+++ b/flask-javascript/src/style/classes.scss
@@ -30,4 +30,8 @@
 .scroll::-webkit-scrollbar {
   display: none;
 }
+
+.page {
+  margin-top: 4em;
+}
 // ----------------------------------------------------------------------------
