Skills and Education
Commit adds skills and education section to portfolio

--- a/flask-javascript/server/templates/layout.html
+++ b/flask-javascript/server/templates/layout.html
@@ -6,7 +6,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Production Server</title>
+    <title>Peter Pak</title>
   </head>
   <body>
     <div id="root"></div>
