--- a/flask-javascript/src/components/SkillsContent/skillsContent.scss
+++ b/flask-javascript/src/components/SkillsContent/skillsContent.scss
@@ -1,9 +1,9 @@
 // ----------------------------------------------------------------------------
 // File Developrer: Peter Pak
-// Description: Custom scss classes for welcome content component
+// Description: Custom scss classes for skills content component
 // ----------------------------------------------------------------------------
 
-// Welcome Page Content Style -------------------------------------------------
+// Skills Page Content Style --------------------------------------------------
 .collapse-header {
   margin: 0em;
   color: white;
