--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -8,6 +8,7 @@
 // ----------------------------------------------------------------------------
 
 // Custom Style Imports -------------------------------------------------------
+@import "./constants";                                                          // Imports style constants
 @import "./elements";                                                           // Imports basic element styles
 @import "./classes";                                                            // Imports basic class styles
 // ----------------------------------------------------------------------------
