--- a/flask-javascript/src/style/constants.scss
+++ b/flask-javascript/src/style/constants.scss
@@ -12,11 +12,11 @@
 
 // Colors ---------------------------------------------------------------------
 $bg-color: #032280;                                                             // Background Color
-$hov-color: #FCC42A;                                                            // Hover Color
+$hov-color: #FFB000;                                                            // Hover Color
 $gen-color: #FC04FC;                                                            // General Color
 $pri-color: #2AF2F8;                                                            // Primary Color
-$sec-color: #0000ff;                                                            // Secondary Color
-$ter-color: #ddf;                                                               // Tertiary Color
+$sec-color: #00FF33;                                                            // Secondary Color
+$ter-color: #282828;                                                            // Tertiary Color
 // ----------------------------------------------------------------------------
 
 // Size -----------------------------------------------------------------------
