--- a/flask-javascript/src/components/NavigationBar/navbar.scss
+++ b/flask-javascript/src/components/NavigationBar/navbar.scss
@@ -5,6 +5,8 @@
 
 // Navigation Bar Component ---------------------------------------------------
 .navbar-outrun {
+  background-color: $ter-color;
+  border : 0.05em solid $sec-color;
 }
 
 .brand-border {
