--- a/flask-javascript/src/style/elements.scss
+++ b/flask-javascript/src/style/elements.scss
@@ -7,7 +7,7 @@
 body {
   font-family: "DS-DIGII";
   background-color: $bg-color;
-  background-image: linear-gradient(to bottom, $bg-color, black);
+  background-image: linear-gradient(to bottom, $bg-color, $ter-color);
   background-attachment: fixed;
 }
 
