--- a/flask-javascript/src/style/index.scss
+++ b/flask-javascript/src/style/index.scss
@@ -4,6 +4,7 @@
 // ----------------------------------------------------------------------------
 
 // Module Imports -------------------------------------------------------------
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400');
 @import "~bootstrap/scss/bootstrap";                                            // Primary import for bootstrap 4
 // ----------------------------------------------------------------------------
 
