--- a/client/src/stylesheets/main.less
+++ b/client/src/stylesheets/main.less
@@ -1,3 +1,19 @@
+/* CSS Reset */
+body { 
+  margin:0; 
+  padding:0; 
+  font-size:100%; 
+  line-height:1; 
+}
+
+/* Constants */
+@import "constants/colors.less";
+@import "constants/elements.less";
+
+/* Components */
+@import "components/navigationBar.less";
+
+
 .btn {
-  color:blue;
+  background-color: @bs-green;
 }
