--- a/client/src/stylesheets/constants/elements.less
+++ b/client/src/stylesheets/constants/elements.less
@@ -1,5 +1,20 @@
 /* Elements */
 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+/* Body */
+body { 
+  font-family: "Quicksand", sans-serif;
+  margin:0; 
+  padding:0; 
+  font-size:100%; 
+  line-height:1; 
+}
+
 /* Button */
 button {
   border: none;
