--- a/client/src/stylesheets/main.less
+++ b/client/src/stylesheets/main.less
@@ -1,14 +1,12 @@
-/* CSS Reset */
-body { 
-  margin:0; 
-  padding:0; 
-  font-size:100%; 
-  line-height:1; 
-}
+/* Fonts */
+@import (css) url('https://fonts.googleapis.com/css?family=Quicksand');
 
 /* Constants */
+@import "constants/styles.less";
 @import "constants/colors.less";
 @import "constants/elements.less";
+@import "constants/classes.less";
+@import "constants/defaults.less";
 
 /* Components */
 @import "components/navigationBar.less";
