--- a/client/src/stylesheets/constants/defaults.less
+++ b/client/src/stylesheets/constants/defaults.less
@@ -1,4 +1,6 @@
 /* Default Constants Values */
 
+@background-color: @bs-white-dark;
+
 @primary-color: @bs-white-dark;
 @secondary-color: @bs-cyan;
