--- a/client/src/stylesheets/constants/styles.less
+++ b/client/src/stylesheets/constants/styles.less
@@ -1,5 +1,6 @@
 
 /* Size Constants */
+
 @width-xsm: 360px;
 @width-sm: 540px;
 @width-md: 720px;
@@ -7,3 +8,18 @@
 @width-xlg: 1080px;
 
 @page-padding: 10rem;
+
+/* Id Constants */
+
+#root {
+}
+
+/* Class Constants */
+
+.page-wrapper {
+  box-sizing: border-box;
+  min-width: @width-sm;
+  margin-top: @navbar-height;
+  padding-left: @page-padding;
+  padding-right: @page-padding;
+}
