--- a/client/src/stylesheets/components/navigationBar.less
+++ b/client/src/stylesheets/components/navigationBar.less
@@ -1,6 +1,10 @@
 /* Navigation Bar Constants */
 
-@navbar-color: @rgba-white;
+@navbar-top-color: rgba(255, 255, 255, 1);
+@navbar-middle-bottom-color: rgba(225, 225, 225, 0.8);
+@navbar-middle-top-color: rgba(200, 200, 200, 0.7);
+@navbar-bottom-color: rgba(150, 150, 150, 0.6);
+
 @navbar-item-color: @bs-cyan;
 @navbar-link-color: @bs-white;
 @navbar-link-color-hover: @bs-black;
@@ -12,17 +16,27 @@
 @navbar-item-margin: 0.5em;
 @navbar-text-margin: 0.25em;
 @navbar-icon-margin: 0.25em;
+@navbar-brand-icon-size: 0.8em;
+
+@navbar-transition-time: 0.3s;
+@navbar-box-shadow: 0em 1em 1em rgba(200,200,200,0.8);
+@navbar-item-box-shadow: 0.1em 0.1em 0.2em;
 
 /* Navigation Bar Styles */
 
 .navbar {
+  background: linear-gradient(@navbar-top-color, @navbar-middle-bottom-color);
   min-width: @width-sm;
   margin: 0;
   height: @navbar-height;
   width: 100%;
-  background-color: @navbar-color;
   position: fixed;
   top: 0;
+  transition: @navbar-transition-time;
+}
+
+.navbar:hover {
+  box-shadow: @navbar-box-shadow;
 }
 
 .navbar-brand {
@@ -31,8 +45,16 @@
   background-color: @navbar-item-color;
   color: @navbar-link-color;
   text-decoration: none;
+  transition: @navbar-transition-time;
   padding: @navbar-item-padding;
   margin: @navbar-item-margin;
+}
+
+.navbar-brand-icon {
+  border-radius: @navbar-border-radius;
+  height: @navbar-brand-icon-size;
+  opacity: 0.8;
+  width: @navbar-brand-icon-size;
 }
 
 .navbar-list {
@@ -46,6 +68,8 @@
   float: left;
   background-color: @navbar-item-color;
   border-radius: @navbar-border-radius;
+  opacity: 0.8;
+  transition: @navbar-transition-time;
   
   cursor: pointer;
   margin-left: @navbar-item-margin;
@@ -68,7 +92,8 @@
 
 .navbar-brand:hover,
 .navbar-list-item:hover {
-  opacity: 0.8;
+  opacity: 1;
+  box-shadow: @navbar-item-box-shadow;
   color: @navbar-link-color-hover;
   .navbar-link {
     color: inherit;
@@ -85,18 +110,20 @@
   display:inline-block;
   margin: 0;
   padding: @navbar-item-padding;
+  opacity: 0.8;
   text-decoration: none;
+  transition: @navbar-transition-time;
 }
-
-
 
 .navbar-dropdown {
   display: inline-block;
   float: left;
+  margin-left: @navbar-item-margin;
+  margin-right: @navbar-item-margin;
 }
 
 .navbar-dropdown-content {
-  background-color: @navbar-color;
+  background: linear-gradient(@navbar-middle-top-color, @navbar-bottom-color);
   border-bottom-left-radius: @navbar-border-radius;
   border-bottom-right-radius: @navbar-border-radius;
   display: none;
@@ -108,12 +135,16 @@
 .navbar-dropdown:hover {
   display: block;
   .navbar-dropdown-button {
-    opacity: 0.8;
+    opacity: 1;
+    box-shadow: @navbar-item-box-shadow;
     color: @navbar-link-color-hover;
+    margin-bottom: 0.4em;
   }
   .navbar-dropdown-content {
+    box-shadow: @navbar-box-shadow;
     display: inherit;
     .navbar-link {
+      opacity: 0.8;
       background-color: @navbar-item-color;
       border-radius: @navbar-border-radius;
       color: @navbar-link-color;
@@ -122,9 +153,12 @@
       margin-top: @navbar-item-margin;
       padding: @navbar-item-padding;
       text-align: center;
+      text-decoration: none;
+      transition: @navbar-transition-time;
     }
     .navbar-link:hover {
-      opacity: 0.8;
+      opacity: 1;
+      box-shadow: @navbar-item-box-shadow;
       color: @navbar-link-color-hover;
     }
   }
