--- a/client/src/stylesheets/constants/colors.less
+++ b/client/src/stylesheets/constants/colors.less
@@ -21,5 +21,7 @@
 @bs-white-dark: #F8F9FA;
 
 /* RGBA Color Constants */
-@rgba-white: rgba(255, 255, 255, 0.9);
+@rgba-white-top: rgba(255, 255, 255, 1);
+@rgba-white-middle: rgba(255, 255, 255, 0.75);
+@rgba-white-bottom: rgba(255, 255, 255, 0);
 
