--- a/client/src/stylesheets/main.less
+++ b/client/src/stylesheets/main.less
@@ -1,3 +1,4 @@
+
 /* Fonts */
 @import (css) url('https://fonts.googleapis.com/css?family=Quicksand');
 
@@ -8,8 +9,10 @@
 @import "constants/defaults.less";
 
 /* Components */
-@import "components/navigationBar.less";
+@import "components/navbar.less";
 
+/* Pages */
+@import "pages/education.less";
 
 .btn {
   background-color: @bs-green;
