--- a/client/src/stylesheets/constants/colors.less
+++ b/client/src/stylesheets/constants/colors.less
@@ -1,6 +1,7 @@
 /* Colors */
 
 /* Bootstrap Color Constants */
+
 @bs-red: #FF4444;
 @bs-red-dark: #CC0000;
 @bs-yellow: #FFBB33;
@@ -21,4 +22,7 @@
 @bs-white-dark: #F8F9FA;
 
 /* RGBA Color Constants */
+
+@background-color: @bs-white-dark;
+@primary-button-color: @bs-green;
 
