--- a/client/src/stylesheets/constants/styles.less
+++ b/client/src/stylesheets/constants/styles.less
@@ -12,10 +12,6 @@
 
 @footer-padding: 2rem;
 
-/* Id Constants */
-
-#root {}
-
 /* Page Constants */
 
 .page-wrapper {
@@ -35,6 +31,8 @@
   padding-left: @page-horizontal-padding;
   padding-right: @page-horizontal-padding;
 }
+
+/* Footer */
 
 .footer {
   text-align: center;
