--- a/client/src/stylesheets/main.less
+++ b/client/src/stylesheets/main.less
@@ -9,7 +9,6 @@
 /* Constants */
 
 @import "constants/colors.less";
-@import "constants/defaults.less";
 @import "constants/effects.less";
 @import "constants/elements.less";
 @import "constants/styles.less";
@@ -21,3 +20,4 @@
 /* Pages */
 
 @import "pages/education.less";
+@import "pages/home.less";
