--- a/client/src/stylesheets/constants/effects.less
+++ b/client/src/stylesheets/constants/effects.less
@@ -1,3 +1,9 @@
+/* Effects Constants */
+
+@default-transition-time: 0.3s;
+@default-opacity: 0.85;
+@default-box-shadow: 0.1em 0.1em 0.2em;
+
 /* Parallax Scrolling */
 
 .parallax {
@@ -12,7 +18,7 @@
 }
 
 .parallax-bg {
-  height: 40em;
+  height: 30em;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
