--- a/client/src/stylesheets/pages/education.less
+++ b/client/src/stylesheets/pages/education.less
@@ -2,7 +2,7 @@
 
 @department-icon-height: 3rem;
 
-/* Image Ids */
+/* Background Image Ids */
 
 #campus {
   background-image: url('@{base-url}/public/images/campus.jpg');
@@ -22,6 +22,5 @@
 
 .icons {
   height: 5em;
-  background-color: red;
   transform: translateZ(0);
 }
