--- a/client/src/stylesheets/constants/styles.less
+++ b/client/src/stylesheets/constants/styles.less
@@ -15,9 +15,11 @@
 /* Page Constants */
 
 .page-wrapper {
+  height: 100vh;
   text-align: center;
   min-width: @width-sm;
-  margin-top: @navbar-height;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .page-header {
