--- a/client/src/stylesheets/constants/effects.less
+++ b/client/src/stylesheets/constants/effects.less
@@ -4,9 +4,29 @@
 @default-opacity: 0.85;
 @default-box-shadow: 0.1em 0.1em 0.2em;
 
-/* Parallax Scrolling */
+/* Simple Parallax */
+
+.parallax-simple {
+  height: 50vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Complex Parallax */
 
 .parallax {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 300px;
+}
+
+.parallax-group {
+  position: relative;
+  height: 100vh;
+  transform-style: preserve-3d;
 }
 
 .parallax-layer {
@@ -17,16 +37,30 @@
   position: absolute;
 }
 
-.parallax-bg {
-  height: 30em;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.parallax-back {
+  transform: translateZ(-300px) scale(2);
+  z-index: 3;
 }
 
 .parallax-base {
-  padding-top: 5em;
-  padding-bottom: 5em;
   transform: translateZ(0);
+  z-index: 4;
+}
+
+.parallax-fore {
+  transform: translateZ(90px) scale(0.7);
+  z-index: 1;
+}
+
+.parallax-deep {
+  transform: translateZ(-600px) scale(3);
+  z-index: 2;
+}
+
+.title {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
