--- a/client/src/stylesheets/pages/home.less
+++ b/client/src/stylesheets/pages/home.less
@@ -5,3 +5,43 @@
 #morty-full {
   background-image: url('@{base-url}/public/images/morty-full.png');
 }
+
+#group1 {
+  z-index: 5;
+  .parallax-base {
+    background: red;
+  }
+}
+
+#group2 {
+  z-index: 3;
+  .parallax-base {
+    background: rgba(255,255,0,0.1);
+  }
+  .parallax-back {
+    background: green;
+  }
+}
+
+#group3 {
+  z-index: 4;
+  .parallax-base {
+    background: blue;
+  }
+  .parallax-fore {
+    background: rgba(255, 0, 0, 0.1);
+  }
+}
+
+#group4 {
+  z-index: 2;
+  .parallax-base {
+    background: rgba(0, 255, 255, 0.1);
+  }
+  .parallax-back {
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .parallax-deep {
+    background: purple;
+  }
+}
